--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,1 +1,167 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Genetic Algorithm for Feature Selection</title>
+<link rel="stylesheet" href="static\css\result.css">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+</head>
+<body>
+   <header>
+   <img src="static\img\logo.jpg" class="logo">
+   <h2><i>Genetic Algorithm Analysis Results</i></h2>
+</header>
+<div class="wrap">
+ <div class="box">
+    <h1>File Info</h1>
+    <p>Rows: <b>{{rows}}</b> | Columns: <b>{{cols}}</b></p>
+    <p>Target Column: <b>{{target}}</b></p>
+    <div>
+      <span class="pill">Total Columns: {{columns|length}}</span>
+      <span class="pill">Numeric: {{num_cols}}</span>
+      <span class="pill">Categorical: {{cat_cols}}</span>
+    </div>
+  </div>
+
+  <div class="box">
+    <h2>First 200 Rows</h2>
+    <div class="scroll">
+      {{preview|safe}}
+    </div>
+  </div>
+
+ <div class="box">
+    <h2>Column Types & Missing Values</h2>
+    <div class="scroll"></div>
+    <table>
+      <tr><th>Column</th><th>Type</th><th>% Missing</th></tr>
+      {% for c in columns %}
+      <tr>
+        <td>{{c}}</td>
+        <td>{{dtypes[c]}}</td>
+        <td>{{missing_perc.get(c, 0)}}</td>
+      </tr>
+      {% endfor %}
+    </table>
+    </div>
+  </div>
+
+   <div class="box">
+    <h2>Numeric Summary</h2>
+    <div class="scroll">
+      {{desc_num_html|safe}}
+    </div>
+  </div>
+  
+   <div class="box">
+    <h2>Numeric Distributions</h2>
+    {% if hist_num %}
+      <img src="data:image/png;base64,{{hist_num}}" alt="Numeric distributions">
+    {% else %}
+      <p>No numeric columns available for distribution plots.</p>
+    {% endif %}
+
+      <h2> Correlation Map</h2>
+      <img src="data:image/png;base64,{{ heatmap }}" class="img-fluid rounded shadow">
+  </div>
+
+  <div class="box">
+    <h2>Target Distribution</h2>
+    <img src="data:image/png;base64,{{target_dist}}" alt="Target distribution">
+  </div>
+
+  <div class="box">
+    <h2>Genetic Algorithm Summary</h2>
+    <table>
+      <tr><th>Generation</th><th>Best Score</th><th>AVG</th><th>STD</th><th>MIN</th><th>MAX</th><th>Best Features</th></tr>
+      {% for g in generations %}
+      <tr>
+        <td>{{g.generation}}</td>
+        <td class="ok">{{g.score}}</td>
+        <td>{{g.AVG}}</td>
+        <td>{{g.STD}}</td>
+        <td>{{g.MIN}}</td>
+        <td>{{g.MAX}}</td>
+        <td class="code">{{ ", ".join(g.features) }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+
+
+    {% if ga_line %}
+      <div class="card" style="margin-top:16px">
+        <h3 class="section-title">The evolution of the best Accuracy across generations</h3>
+        <img src="data:image/png;base64,{{ ga_line }}" alt="ga best per generation" />
+      </div>
+    {% endif %}
+  </div>
+
+  <div class="box">
+    <h2>Best Result</h2>
+    <p><b>Best Accuracy (GA):</b> {{'%.4f'|format(best_score)}}</p>
+    <span class="pill">The number of selected features:{{ best_features|length }}</span>
+    <h3>Best Feature Set:</h3>
+    <p class="code">{{best_features}}</p>
+      <h2>Download selected features</h2>
+    <form method="POST" action="/download_features">
+        <input type="hidden" name="features" value="{{ best_features | join(',') }}">
+        <button type="submit">Download Features</button>
+    </form>
+  </div>
+
+  <div class="box">
+      <h2>Chi-square</h2>
+    <img src="data:image/png;base64,{{ chi_plot }}" class="img-fluid rounded shadow mb-3">
+    <p><strong>Best Feature :</strong> {{ chi_features }}</p>
+  
+    <h2>Lasso / Logistic L1</h2>
+    <img src="data:image/png;base64,{{ lasso_plot }}" class="img-fluid rounded shadow mb-3">
+    <p><strong>Best Feature :</strong> {{ lasso_features }}</p>
+
+    <h2>PCA Analysis</h2>
+    <p>Explained Variance: {{ pca_info.total_variance }}%</p>
+    <div class="row">
+        <div class="col-md-4"><img src="data:image/png;base64,{{ pca_var }}" class="img-fluid shadow"></div>
+        <div class="col-md-4"><img src="data:image/png;base64,{{ pca_2d }}" class="img-fluid shadow"></div>
+        <div class="col-md-4"><img src="data:image/png;base64,{{ pca_3d }}" class="img-fluid shadow"></div>
+    </div>
+  </div>
+
+  <div class="box">
+  <h2>Baseline Model Accuracy</h2>
+    <table>
+      <tr><th>Model</th><th>Accuracy</th></tr>
+      {% for name, acc in performance.items() %}
+        <tr><td>{{name}}</td><td>{{'%.4f'|format(acc)}}</td></tr>
+      {% endfor %}
+      <tr><td>Genetic Algorithm (Best)</td><td>{{'%.4f'|format(best_score)}}</td></tr>
+    </table>
+    <h3>Comparison Chart</h3>
+    <img src="data:image/png;base64,{{graph_models}}" alt="Model Comparison Chart">
+  </div>
+
+  <div class="box">
+    <h2>Performance Evaluation (Classification Metrics)</h2>
+    <img src="data:image/png;base64,{{ conf_plot }}" class="img-fluid shadow mb-3"><br>
+    {{ class_metrics | safe }}
+  </div>
+
+   <div class="footer-btn">
+    <form method="GET" action="/">
+      <button><i>Upload New File</i></button>
+    </form>
+  </div>
+</div>
+
+<footer class="footer" id="about">
+    <div class="foot-card">
+      <p><strong>Work Team:</strong></p>
+      <p><i>Tasnim_149038 · safa_200402 · marwa_200508 · Rayan_172458 · alaa_181453 · Lojyn_172829 · ghadeer_139102</i></p>
+    </div>
+  </footer>
+
+</body>
+</html>
