--- a/app/static/css/result.css
+++ b/app/static/css/result.css
@@ -3,7 +3,9 @@
       background:#f5f5f5; 
       color:#222; 
       margin:0; 
-      padding:0; }
+      padding:0; 
+   }
+
    header {
       display: flex;
       justify-content:space-around;
